--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.url=jdbc:mysql://mysqlserver/budgetapp
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/budgetapp
 spring.datasource.username=TEST
-spring.datasource.password=
+spring.datasource.password=TESTP
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
 
