--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.hibernate.ddl-auto=create
 # Commented out connection url for database when spring is run inside docker app.
 #spring.datasource.url=jdbc:mysql://mysqlserver/budgetapp
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/budgetapp
-spring.datasource.username=TEST
-spring.datasource.password=TESTP
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
 
